No longer using deprecated constructors